--- a/kanata.cfg
+++ b/kanata.cfg
@@ -1,25 +1,25 @@
 (defsrc
-grv
-q w e r t y u i o p
+esc
+q w e r t y u i o p bspc
 caps a s d f g h j k l ;
 z x c v b n m , . /
 )
 
 (deflayer canary
 @qw
-w l y p k z x o u ;
+w l y p k z x o u ; esc
 bspc c r s t b f n e i a
 j v d g q m h / , .)
 
 (deflayer qwerty
 @cn
-q w e r t y u i o p
-caps a s d f g h j k l ;
+q w e r t y u i o p esc
+bspc a s d f g h j k l ;
 z x c v b n m , . /
 )
 
 (defalias
-cn (tap-hold 200 200 grv (layer-switch canary))
-qw (tap-hold 200 200 grv (layer-switch qwerty))
+cn (layer-switch canary)
+qw (layer-switch qwerty)
 )
 
