--- a/home/swaync/config.json
+++ b/home/swaync/config.json
@@ -3,7 +3,7 @@
   "positionY": "top",
   "layer": "overlay",
   "layer-shell": "true",
-  "cssPriority": "application",
+  "cssPriority": "user",
   "control-center-margin-top": 10,
   "control-center-margin-bottom": 10,
   "control-center-margin-right": 10,
